2010-02-19 [iwkse]	0.9.9cvs5

	* src/fancy_viewer.c
            A better check to WebKit's version

2010-02-19 [iwkse]	0.9.9cvs4

	* src/fancy_viewer.c
            Add support for internal images as cid
            fix bug 2120

2010-02-10 [iwkse]	0.9.9cvs3

	* configure.ac
	* src/Makefile.am
            Add a version check to libsoup-gnome
            Commit the forgotten Makefile.am

2010-02-09 [sal]	0.9.9cvs2

	* src/fancy_viewer.c
	* src/fancy_viewer.h
            Add support for libsoup-gnome
            Patch by nebojsa with slight change

2010-01-31 [paul]	0.9.9cvs1

	* src/fancy_prefs.c
		add missing include, remove unneeded include: fix non-
		translation of GUI

2010-01-08 [paul]	0.9.9

	0.9.9 released.

2010-01-08 [paul]	0.9.8cvs4

	* configure.ac
	* po/ca.po
	* po/nl.po
	* po/sk.po
		added by Miquel Oliete, Marcel Pol, and Slavko
	* po/cs.po
	* po/fi.po
	* po/hu.po
	* po/id.po
	* po/ja.po
		updated by David Vachulka, Tommi Pirinen, Pader Rezso,
		MSulchan Darmawan, kazken3

2009-11-20 [iwkse]	0.9.8cvs3

	* src/fancy_viewer.c
                Add fancy_prefs_cache_init

2009-11-20 [iwkse]	0.9.8cvs2

	* src/fancy_viewer.h
	* src/fancy_viewer.c
                Fix a bug related to blocking links preference.
                Add a simple cache mechanism for Webkit settings.

2009-11-07 [iwkse]	0.9.8cvs1

	* src/fancy_viewer.c
	* src/fancy_prefs.h
	* src/fancy_prefs.c
            Fix bug 1977, 'Save zoom level between sessions'
            Patch mainly by Pawel Pekala

2009-10-09 [paul]	0.9.8

	0.9.8 released.

2009-10-07 [iwkse]	0.9.7cvs13

	* src/fancy_viewer.c
		Fix bug with popup menu and actions

2009-09-30 [iwkse]	0.9.7cvs12

	* src/fancy_viewer.c
            Fix "search the web" menu action

2009-09-29 [iwkse]	0.9.7cvs11

	* src/fancy_viewer.h
	* src/fancy_viewer.c
            Added a menu for override preferences

2009-09-28 [iwkse]	0.9.7cvs10

	* src/fancy_viewer.c
            Added fancy_open_uri() to  handle http:// and mailto schemas
